# CVProject

./: .gitignore  CMakeLists.txt  README.txt  intermediateProject.cpp
.cache/clangd/index/: intermediateProject.cpp.9249D054953D200B.idx  marco_annunziata.cpp.1FCB35A65338E304.idx  marco_annunziata.hpp.360F16688444D0EE.idx
include/: hermann_serain.hpp  marco_annunziata.hpp  shared.hpp  sveva_turola.hpp
src/: hermann_serain.cpp  intermediateProject.cpp  marco_annunziata.cpp  shared.cpp  sveva_turola.cpp
